--- a/Css/Style.css
+++ b/Css/Style.css
@@ -59,7 +59,9 @@ footer{
     padding: 10px;
     margin: 0px;
 }
-
+.footerderechos{
+    color: #878787;
+   }
 footer a {
     color: inherit;
     text-decoration: none;
