--- a/Css/Style.css
+++ b/Css/Style.css
@@ -65,7 +65,6 @@ footer img{
     font-weight: 600;
 }
 
-
 .btn:hover{
     background-color: rgb(144, 98, 0);
     color: black;
@@ -119,4 +118,32 @@ footer img{
 
 .siguenos{
     font-size: 40px;
+}
+
+.pagSecundaria{
+    margin-top: 8%;
+}
+
+.coachesImg{
+    width: 320px;
+    padding: 20px;
+}
+
+.coachesAline{
+    padding: 20px;
+}
+
+.subtitloCoach{
+    font-weight: 700;
+    font-size: 25px;
+    opacity: 70%;
+}
+
+.nombreCoach{
+    font-size: 40px;
+}
+
+.coachesImgHorario{
+    width: 250px;
+    padding: 20px;
 }
