--- a/Css/PlanesStyle.css
+++ b/Css/PlanesStyle.css
@@ -1,71 +1,124 @@
 html{
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body{
-    background-color: rgb(29, 29, 29);
-    margin: 0px;
-    color: rgb(255, 255, 255);
+  background-color: rgb(29, 29, 29);
+  margin: 0px;
+  color: rgb(255, 255, 255);
 }
 
 h2{
-    color: rgb(255, 255, 255);
-    font-size: 30px;
+  color: rgb(255, 255, 255);
+  font-size: 30px;
 }
 
 .logo{
-    width: 80px;
+  width: 70px;
 }
 
+.impfondo {
+  display: block;
+  position: relative;		
+  width: 100%;
+}
 
 .navbar{
-    background-color: rgba(0, 0, 0, 0.419);
-
+  background-color: rgba(0, 0, 0, 0.541);
 }
 
-.alinear{
-    vertical-align: middle;
-}
-  
-
-.Titulo {
-    color: rgba(255, 255, 255, 0.805);
-    text-align: center;
-    padding: 50px 10px;
-    margin-top: 120px; 
-    font-size: 4rem;
+.navbar-nav{
+  font-size: 18px;
 }
 
 .imgNav{
-    width: 40px;
-    opacity: 80%;
+  width: 40px;
+  opacity: 80%;
 }
 
 footer{
-    bottom: 0;
-    width: 100%;;
-    text-align: center;
-    background: rgb(0, 0, 0);
-    padding: 10px;
-    margin: 0px;
-}
-.footerderechos{
- color: #878787;
+  text-align: center;
+  background: rgb(0, 0, 0);
+  padding: 10px;
+  margin: 0px;
 }
 
 footer a {
-    color: inherit;
-    text-decoration: none;
-    font-weight: normal;
+  color: inherit;
+  text-decoration: none;
+  font-weight: normal;
 }
 
 footer img{
-    vertical-align: middle;
-    width: 80px;
+  vertical-align: middle;
+  width: 80px;
 }
 
 .redes{
-    vertical-align: middle;
+  vertical-align: middle;
+}
+
+.btn{
+  background-color: rgba(212, 157, 19, 1);
+  font-size: 25px;
+  padding: 20px 40px;
+  font-weight: 600;
+}
+
+
+.btn:hover{
+  background-color: rgb(144, 98, 0);
+  color: black;
+}
+
+.btn:active{
+  background-color: rgb(57, 39, 0) !important;
+}
+
+.TituloPrincipal{
+  font-size: 80px;
+}
+
+.imgPrincipal{
+  width: 100%;
+}
+
+.textoPrincipal{
+  font-size: 25px;
+  opacity: 70%;
+}
+
+.bgOscuro{
+  background-color: rgba(20, 20, 20, 1);
+  padding: 40px;
+}
+
+.tituloSecPrincipal{
+  font-size: 50px;
+  text-align: center;
+}
+
+.carousel{
+  width: 1000px;
+  align-items: center;
+}
+
+.conoceRemo{
+  width: 700px;
+  padding: 50px;
+}
+
+.TextoCompacto{
+  padding: 30px;
+  text-align: center;
+}
+
+.espacioTexto{
+  padding: 40px;
+}
+
+.siguenos{
+  font-size: 40px;
 }
 
 /* seccion estilos planes*/
