--- a/Css/Productos.css
+++ b/Css/Productos.css
@@ -84,7 +84,7 @@ footer img{
   /* Contenedor que mantiene la imagen y el fondo */
   .product-image-container {
     position: relative;
-    width: 450px; /* Puedes ajustar según necesites */
+    width: 450px; 
     height: 300px;
     display: flex;
     justify-content: center;
@@ -100,9 +100,7 @@ footer img{
     height: 100%;
     background-color: #D5BD5C; 
     border-radius: 8px;
-    z-index: 1;
-    /*transform: translate(-50%, -50%); Ajuste fino para centrar */
-    
+    z-index: 1; 
   }
   
   /* Imagen principal encima del fondo */
@@ -124,8 +122,6 @@ footer img{
     height: auto;
     
   }
-  
-  /* Información del producto */
   .product-info {
     max-width: 400px;
   }
@@ -157,43 +153,44 @@ footer img{
     background-color: #b89d36;
   }
 
-/* Contenedor de la tarjeta de producto 2*/
-
-/* SECCIÓN CREATINA */
+  /* Contenedor de la tarjeta de producto 2*/
+ 
 .seccion-creatina {
-    padding: 5rem 0;
-    background-color: #141414; /* fondo oscuro */
+    padding: 11rem 0;
+    background-color: #141414; 
     color: #ffffff;
   }
   
   .seccion-creatina h3 {
     font-weight: 700;
+    font-size: 4rem;
+    margin-bottom: 3rem;
   }
   
   .descripcion-creatina {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
     font-size: 1.5rem;
     line-height: 1.6;
+    max-width: 450px;
   }
   
   .contenedor-boton {
     display: flex;
-    justify-content: center; /* centro en móviles */
+    justify-content: center; /* centro en móviles (no se si sirva)*/
   }
   
   @media (min-width: 768px) {
     .contenedor-boton {
-      justify-content: flex-start; /* alineado a la izquierda en desktop */
+      justify-content: flex-start; /* alineado a la izquierda en desktop (no se si sirva) */
     }
   }
   
   .boton-comprar {
     font-weight: 700;
-    padding: 0.5rem 1.5rem;
+    padding: 0.8rem 2rem;
     border-radius: 6px;
+    transition: background-color 0.3s ease;
   }
-  
-  /* IMAGEN Y FONDO */
   .contenedor-imagen {
     position: relative;
     display: flex;
@@ -202,16 +199,15 @@ footer img{
   }
   
   .fondo-amarillo {
-    background-color: #D5BD5C;
-    width: 300px;
-    height: 200px;
+    background-color: #BFAC5E;
+    width: 100%;
+    height: 100%;
     border-radius: 8px;
     position: absolute;
     top: 20px;
-    left: 20px;
-    z-index: 0;
-  }
-  
+    left: -20px;
+    z-index: 1;
+  }  
   .imagen-creatina {
     background-color: #D5BD5C;
     padding: 20px;
@@ -221,7 +217,9 @@ footer img{
   }
   
   .imagen-creatina img {
-    max-width: 250px;
+    max-width: 350px;
     height: auto;
   }
+  
+
   
