--- a/Css/Compras.Css
+++ b/Css/Compras.Css
@@ -1,25 +1,9 @@
-html {
-    font-family: 'Montserrat', sans-serif;
+.btn{
+    padding: 0px 10px;
 }
 
-body {
-    background-color: rgb(29, 29, 29);
-    margin: 0px;
-    color: rgb(255, 255, 255);
-}
-
-.Titulo {
-    color: rgba(255, 255, 255, 0.805);
-    text-align: center;
-    padding: 50px 10px;
-    margin-top: 120px;
-    font-size: 4rem;
-}
-
-.btn-custom {
-    background-color: #ffc107;
-    color: black;
-    font-weight: bold;
+.nombreProducto{
+    font-size: 30px;
 }
 
 /* Contenedor producto */
@@ -66,30 +50,3 @@ body {
     border-radius: 12px;
 }
 
-footer {
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    background: rgb(0, 0, 0);
-    padding: 10px;
-    margin: 0px;
-}
-
-.footerderechos {
-    color: #878787;
-}
-
-footer a {
-    color: inherit;
-    text-decoration: none;
-    font-weight: normal;
-}
-
-footer img {
-    vertical-align: middle;
-    width: 80px;
-}
-
-.redes {
-    vertical-align: middle;
-}
