--- a/Css/Productos.css
+++ b/Css/Productos.css
@@ -1,74 +1,4 @@
-html{
-    font-family: 'Montserrat', sans-serif;
-}
-
-body{
-    background-color: rgb(29, 29, 29);
-    margin: 0px;
-    color: rgb(255, 255, 255);
-}
-
-h2{
-    color: rgb(255, 255, 255);
-    font-size: 30px;
-}
-
-.logo{
-    width: 80px;
-}
-
-
-.navbar{
-    background-color: rgba(0, 0, 0, 0.419);
-
-}
-
-.alinear{
-    vertical-align: middle;
-}
-  
-
-.Titulo {
-    color: rgba(255, 255, 255, 0.805);
-    text-align: center;
-    padding: 50px 10px;
-    margin-top: 120px; 
-    font-size: 4rem;
-}
-
-.imgNav{
-    width: 40px;
-    opacity: 80%;
-}
-
-footer{
-    bottom: 0;
-    width: 100%;;
-    text-align: center;
-    background: rgb(0, 0, 0);
-    padding: 10px;
-    margin: 0px;
-}
-.footerderechos{
- color: #878787;
-}
-
-footer a {
-    color: inherit;
-    text-decoration: none;
-    font-weight: normal;
-}
-
-footer img{
-    vertical-align: middle;
-    width: 80px;
-}
-
-.redes{
-    vertical-align: middle;
-}
-
-/*css para pagina proteina XD*/
+/*css para pagina proteina*/
 
 /* Contenedor de la tarjeta de producto 1-3*/
 .product-card {
@@ -137,20 +67,8 @@ footer img{
     margin-bottom: 1.5rem;
   }
   
-  .btn-warning {
-    background-color: #D49D13;
-    border: none;
-    color: #000;
+  .btn {
     padding: 0.5rem 1.5rem;
-    border-radius: 8px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-
-
-  }
-  
-  .btn-warning:hover {
-    background-color: #b89d36;
   }
 
   /* Contenedor de la tarjeta de producto 2*/
