--- a/Css/perfil.css
+++ b/Css/perfil.css
@@ -44,7 +44,7 @@
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    background-color: #fff; /* Fondo del avatar si no hay imagen */
+    background-color: #fff; 
     border: 8px solid #141414;
   }
   
