--- a/Css/Productos.css
+++ b/Css/Productos.css
@@ -14,25 +14,12 @@
   /* Contenedor que mantiene la imagen y el fondo */
   .product-image-container {
     position: relative;
-    width: 450px; 
-    height: 300px;
+    width: 700px; 
+    height: 650px;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  /* Capa amarilla detrás de la imagen */
-  .background-layer {
-    position: absolute;
-    top: 20px;
-    left: -20px;
-    width: 100%;
-    height: 100%;
-    background-color: #D5BD5C; 
-    border-radius: 8px;
-    z-index: 1; 
-  }
-  
+  } 
   /* Imagen principal encima del fondo */
   .image-layer {
     position: absolute;
@@ -94,7 +81,7 @@
   
   .contenedor-boton {
     display: flex;
-    justify-content: center; /* centro en móviles (no se si sirva)*/
+    justify-content: center; /* centro en móviles*/
   }
   
   @media (min-width: 768px) {
@@ -109,25 +96,8 @@
     border-radius: 6px;
     transition: background-color 0.3s ease;
   }
-  .contenedor-imagen {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
   
-  .fondo-amarillo {
-    background-color: #BFAC5E;
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    position: absolute;
-    top: 20px;
-    left: -20px;
-    z-index: 1;
-  }  
   .imagen-creatina {
-    background-color: #D5BD5C;
     padding: 20px;
     border-radius: 8px;
     position: relative;
@@ -135,8 +105,8 @@
   }
   
   .imagen-creatina img {
-    max-width: 350px;
-    height: auto;
+    max-width: 700px;
+    height: 650px;
   }
   
 
