--- a/Css/Coaches.css
+++ b/Css/Coaches.css
@@ -1,20 +1,18 @@
 .tituloHorario{
     text-align: center;
-
 }
 
-.pagSecundaria{
-    margin-top: 8%;
-}
-
+/*Tamaño de imagenes de coaches*/
 .coachesImg{
     width: 320px;
     padding: 20px;
 }
 
+/*Alinea los nombres de los coaches*/
 .coachesAline{
     padding: 20px;
 }
+
 
 .subtitloCoach{
     font-weight: 700;
@@ -26,11 +24,14 @@
     font-size: 40px;
 }
 
+/*Tamaño de imagen de los coaches 
+en la sección de horarios*/
 .coachesImgHorario{
     width: 600px;
     padding: 20px;
 }
 
+/*Personalización de las tablas para los horarios*/
 .agendaTabla{
     width: 100%;
     color: white;
@@ -39,11 +40,13 @@
     font-weight: 700;
 }
 
+/*Ajuste de celdas de la tabla*/
 .agendaTabla th, .agendaTabla td {
     border: 1px solid #ffffff;
     padding: 10px;
 }
 
+/*Encabezado de la tabla en negrita y mayusculas*/
 .agendaTabla th {
     font-weight: bold;
     text-transform: uppercase;
