--- a/Css/perfil.css
+++ b/Css/perfil.css
@@ -77,15 +77,7 @@
   
   /* Botón renovar */
   .btn-renovar {
-    background-color: #d49d13;
-    color: #000;
-    font-weight: 700;
-    padding: 0.8rem 1.5rem;
-    border: none;
-    border-radius: 6px;
-    margin-top: 1.5rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    font-size: 20px;
   }
   
   .btn-renovar:hover {
@@ -98,8 +90,7 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 2rem;
-    
-    
+  
   }
   
   .btn-cerrar {
